--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             ERROR UNABLE YOUR BROWSER DOESNT SEEM TO
             SUPPORT CANVAS
         </canvas>
+        <div class="control">
+            <button class="play">Play</button>
+            <button class="pause">Pause</button>
+            <button class="checker">checker board</button>
+        </div>
     </body>
 </html>
 
