add reset board

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <button class="play">Play</button>
             <button class="pause">Pause</button>
             <button class="checker">checker board</button>
+            <button class="reset">reset board</button>
         </div>
     </body>
 </html>
